WebInject

Copyright 2010 Sven Nierlein (nierlein@cpan.org)
Copyright 2004-2006 Corey Goldberg (corey@goldb.org)
For information and documentation, visit the website at http://www.webinject.org

---------------------------------
Release History:

Version 1.68 - Tue May 31 14:25:35 CEST 2011
    - test case will fail if parsed result does not match

Version 1.67 - Thu Apr 28 16:52:29 CEST 2011
    - make parsed respones available in the errormessage

Version 1.66 - Tue Mar  8 19:18:04 CET 2011
    - fixed setting httpauth with -s

Version 1.64 - Sun Feb 27 18:37:16 CET 2011
    - fixed file upload
    - fixed some warnings

Version 1.62 - Sat Feb 19 16:24:56 CET 2011
    - fixed cpan package

Version 1.60 - Sat Feb 12 15:10:09 CET 2011
    - fixed ssl proxy support
    - added tests for proxy support

Version 1.58 - Tue Jan 25 20:15:35 CET 2011
    - really fixed problem with regular expression using whitespace (thanks Benoit Baron)

Version 1.57 - Sat Jan 22 00:34:56 CET 2011
    - fixed problem with regular expression using whitespace (thanks Olivier Legras)

Version 1.56 - Thu Jan 20 18:31:06 CET 2011
    - added support for verifypositive|negative1-9999
    - added lable to test case output when supplied
    - fixed error message when trying to start with invalid test files
    - webinject now exits with rc = 1 in case of failed tests ( not in reportmode nagios )

Version 1.55 - Sun Dec 19 11:39:30 CET 2010
    - fixed problem with xml post checks (thanks Frédéric Gicquel)
    - fixed problem with escaping form types

Version 1.54 - Tue Sep 14 11:55:48 CEST 2010
    - fixed problem with "Return code of 13 for check of service ... on host ... was out of bounds"
    - fixed problem with error output
    - fixed problem with specifying testcases in the config.xml

Version 1.53 - Aug 24, 2010
    - fixed package again

Version 1.52 - Aug 23, 2010
    - fixed package (Makefile.PL) was missing
    - added make target for webinject.pl

Version 1.51 - Jul 30, 2010