@@ -9,6 +9,7 @@ Release History:
 
 Version 1.68 - Tue May 31 14:25:35 CEST 2011
     - test case will fail if parsed result does not match
+    - made overwriting default options in check_webinject possible
 
 Version 1.67 - Thu Apr 28 16:52:29 CEST 2011
     - make parsed respones available in the errormessage
